# Kokkos-for-Flash-X

./: .clang-format  .gitignore  CMakeLists.txt  README.md
flcl/: CMakeLists.txt  README.md
flcl/src/: flcl-f.f90  flcl-ndarray-f.f90  flcl-types-cxx.hpp  flcl-types-f.f90  flcl-util-kokkos-f.f90  flcl-util-strings-f.f90
flcl/test/: flcl-test-cxx.cpp  flcl-test-f.F90
